LearningKubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-service
  namespace: abhi
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: nginx

  type: ClusterIP
